rebuild classes Server and MultiTreadServer